--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,8 +6,9 @@
     justify-content: center;
   } 
  }
-.employee{
+.employees{
   background-color: $section-bg-color;
+  padding-bottom: 60px;
   }
   .employee__card {
     margin-top: 50px;
