--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,6 @@
 @import "./components/work";
 @import "./components/platforms";
 @import "./components/team";
-@import "components/clients";
+@import "./components/clients";
+@import "./components/container";
+@import "./components/footer";
